# code_culture

./: .env  .gitignore  agent_logic.py  check_models.py  main.py  pyproject.toml  requirements.txt  test_llm.py
data/vector_store/: chroma.sqlite3
notebook/: document.ipynb
