[project]
name = "code-culture"
version = "0.1.0"
description = "A simple RAG for providing a guided experience for the code culture website"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.3.7",
    "faiss-cpu>=1.13.1",
    "generativeai>=0.0.1",
    "google-generativeai>=0.8.6",
    "hf-xet>=1.2.0",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.5",
    "langchain-google-genai>=4.1.2",
    "pymupdf>=1.26.7",
    "pypdf>=6.5.0",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=0.2.5.1",
    "tqdm>=4.67.1",
]
